--- a/bscs23169_Products.html
+++ b/bscs23169_Products.html
@@ -15,7 +15,7 @@
 
         <div>
             <ul id="navbar">
-                <li><a  href="bscs23169_Home.html">Home</a></li>
+                <li><a  href="index.html">Home</a></li>
                 <li><a class="active" href="bscs23169_Products.html">Shop</a></li>
                 <li><a href="bscs23169_Contact.html">Contact</a></li>
             </ul>
