--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="shIrC-k_zKppsyLQk2jIQPxVrpK1oUW2ljje1Nfi0yw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-commerce</title>
     <link rel="shortcut icon" type="image/png" href="bscs23169_image/bscs23169_image1.png">
